--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,14 @@
 
 name: Andreas Renberg (IQAndreas)
 author: Andreas Renberg (IQAndreas)
-url: 'https://github.com/IQAndreas/gh-pages-template'
+url: 'http://www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com/'
 
-title: "GitHub Pages Jekyll Template"
-subtitle: "Avoiding repeated code across all my GitHub Pages"
+title: "Welcme to www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com!"
+displayed_title: "Welcome to"
+subtitle: "www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com!"
 
-github_url: 'https://github.com/IQAndreas/gh-pages-template/tree/gh-pages-minimal'
-github_username: IQAndreas
+#github_url: 'https://github.com/IQAndreas/www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com'
+#github_username: IQAndreas
 
 #copyright_message: &copy;&nbsp;2014 by Andreas&nbsp;Renberg
 github_license: The MIT License
@@ -40,8 +41,8 @@ global_fonts:       http://static.iqandreas.com/assets/fonts
 google_analytics_id:   UA-44446017-1
 google_analytics_name: iqandreas.com
 
-source_title_prefix: "GitHub: IQAndreas/gh-pages-template"
-source_url: 'https://github.com/IQAndreas/gh-pages-template/tree/gh-pages'
+source_title_prefix: "GitHub: IQAndreas/www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com"
+source_url: 'https://github.com/IQAndreas/www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com/tree/gh-pages'
 
 # ----------------------- #
 #     Jekyll Configs      #
