--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ name: Andreas Renberg (IQAndreas)
 author: Andreas Renberg (IQAndreas)
 url: 'http://www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com/'
 
-title: "Welcme to www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com!"
+title: "Welcome to www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com!"
 displayed_title: "Welcome to"
 subtitle: "www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com!"
 
