Adjust footer so the trollface shows up

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ subtitle: "www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqa
 #github_url: 'https://github.com/IQAndreas/www.www.you.can.basically.have.as.long.of.a.subdomain.as.you.want.iqandreas.com'
 #github_username: IQAndreas
 
-copyright_message: '<img src="/assets/images/trollface-100px.png">'
+#copyright_message: '<img src="/assets/images/trollface-100px.png">'
 #github_license: The MIT License
 #github_license_url: https://github.com/IQAndreas/markdown-licenses/blob/master/mit.md
 
